# funasr-py

./: .gitignore  main.py  main1.py  model_infer_only.py  pyproject.toml  recognition_results.json  server.pem
onnx_demo/: demo_paraformer_offline.py
src/: asr_server.py  asr_session.py  asr_worker.py  async_tasks.py  const.py  logger.py  online_worker.py  server.py  session.py  util.py  vad_worker.py  worker.py
src/util/: stream_predict_pt.py
test/: asr_server.py  spk_model.py  test_asr.py  test_asr_cagent.py  test_offline.py  test_online.py  test_vad.py  test_webrtc_vad.py
websocket/: funasr_wss_client.py  funasr_wss_server.py  funasr_wss_server1202.py
