[project]
name = "funasr-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "funasr>=1.2.7",
    "numpy>=2.3.5",
    "websockets>=15.0.1",
    "scipy>=1.4.1",
    "librosa",
    "jamo",
    "PyYAML>=5.1.2",
    "soundfile>=0.12.1",
    "kaldiio>=2.17.0",
    "torch_complex",
    "sentencepiece",
    "jieba",
    "pytorch_wpe",
    "editdistance>=0.5.2",
    "oss2",
    "tqdm",
    "umap_learn",
    "jaconv",
    "hydra-core>=1.3.2",
    "tensorboardX",
    "requests",
    "modelscope",
    "torch==2.8.0",
    "torchaudio==2.8.0",
    "onnxscript>=0.5.6",
    "torchvision",
    "kaldi-native-fbank>=1.22.3",
    "onnxruntime>=1.23.2",
    "pyaudio>=0.2.14",
    "websocket-client>=1.9.0",
    "fastapi>=0.123.0",
    "uvicorn[standard]>=0.30.0",
]
